--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.7.1
 Django==5.1.6
 django-debug-toolbar==5.0.1
 django-environ==0.12.0
+django-filter==25.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 djoser==2.3.1
